fix(waybar): gap between battery and power profiles modules

--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -43,7 +43,6 @@ window#waybar {
 #memory,
 #temperature,
 #language,
-#battery,
 #bluetooth,
 #custom-idle_inhibitor,
 #custom-storage,
@@ -68,7 +67,8 @@ window#waybar {
   padding: 0px 4px;
 }
 
-#custom-power {
+#custom-power, 
+#battery {
   padding: 0px 0px 0px 4px;
 }
 
